Fix buf Z-index

--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   top: 0;
   width: 100%;
